# todo4-hermes-plugin

./: README.md  __init__.py  config.py  plugin.yaml  pyproject.toml  tools.py
skills/todo4-onboard/: SKILL.md
skills/todo4-work/: SKILL.md
tests/: conftest.py  test_tools.py
todo4_hermes/: __init__.py  config.py  schemas.py
todo4_hermes/skills/: onboard.md  work-with-todo4.md
